	Complete files for 'check-ignore'

	* 37923: Completion/Debian/Command/_bts: Completion: _bts:
	Fix quoting of $DEBEMAIL.

	* 37922: Util/zyodl.vim: zyodl.vim: Add alternative installation
	instructions.

	* 37896: Doc/Zsh/builtins.yo: zshbuiltins: Document argv
	behaviour of 'source' without arguments

	* unposted: ChangeLog: Move the 37678 entry to the correct
	location (and author).

2016-02-07  Dominik Ritter  <dritter03@googlemail.com>

	* unposted: Doc/Zsh/mod_complist.yo: complist module docs:
	Fix parameter name in an example.

2016-02-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: README: Follow-up to 37833: extend description of
	37804 in README.

2016-02-04  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 37874: Src/Builtins/sched.c: remove unused function argument.

2016-02-03  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 37868: Src/Modules/curses.c, Src/Modules/param_private.c,
	Src/Modules/tcp.c, Src/Modules/termcap.c, Src/Modules/zftp.c,
	Src/Zle/complist.c, Src/Zle/zle_misc.c, Src/Zle/zle_utils.c,
	Src/cond.c, Src/exec.c, Src/glob.c, Src/jobs.c, Src/params.c,
	Src/prompt.c, Src/utils.c: add 'static' to file local variables.

2016-01-31  Barton E. Schaefer  <schaefer@zsh.org>

	* 37859: Src/text.c: NULL-terminate cond_binary_ops static array.

2016-01-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 37845: Doc/Zsh/builtins.yo: Forward-reference typeset instances
	where no parameter is created, and remove the obsolete statement
	about array assignments separated from typeset command on -p.

	* 37844: Doc/Zsh/builtins.yo: reorder typeset introduction to keep
	related concepts together.

2016-01-30  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37831: Doc/Zsh/builtins.yo: typeset: Document exit status
	difference from parameter assignment statements

2016-01-30  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 37838: Src/Builtins/rlimits.c, Src/Builtins/sched.c,